--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,91 @@
-# --- Python Environment ---
+# ====================================
+# RAG 智能问答系统 - Git 忽略配置
+# ====================================
+
+# 环境变量和密钥
+.env
+*.key
+*.pem
+
+# Python 相关
 __pycache__/
 *.py[cod]
 *$py.class
-.env
-.venv
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# 虚拟环境
 venv/
 env/
-build/
-dist/
-.vscode/
-chroma_db/
-images/
-*.json
-*.lock
+ENV/
+.venv
+
+# 模型文件（通常很大）
+models/
+*.bin
+*.safetensors
+*.pt
 *.pth
-*.whl
+*.ckpt
+cl100k_base.tiktoken
 
-# --- RAG Specific (Local Data & DB) ---
-# Ignore the vector database folder
+# 向量数据库
 chroma_db/
+*.db
+*.sqlite
 
-# Ignore processed chunk debug files
-vector_ingest.json
+# 数据文件
+*.json
+!package.json
+!tsconfig.json
 parent_store.json
+vector_ingest.json
 
-# --- Models (Large Files) ---
-# We ignore the local model folder because it is huge. 
-# Others should download/path it locally.
-model/
-# If you store models inside specific project folders:
-**/acge_text_embedding/
+# 文档文件（根据需要调整）
+book.md
+*.pdf
+*.docx
 
-# --- Documents ---
-# Usually, you keep the source .md or .pdf in git, 
-# but if they are private or huge, uncomment below:
-# *.pdf
-# *.md
+# 图片目录
+images/
 
-# --- OS & IDE ---
-.DS_Store
+# IDE 配置
 .vscode/
 .idea/
 *.swp
+*.swo
+*~
+.DS_Store
 
-# --- Logs ---
+# 日志文件
 *.log
+logs/
+
+# 测试覆盖率
+.coverage
+.pytest_cache/
+htmlcov/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+*.ipynb
+
+# 临时文件
+*.tmp
+*.temp
+.cache/
