ok version after reoptimize

--- a/env.example
+++ b/env.example
@@ -21,6 +21,8 @@ APP_PORT=8000
 APP_RELOAD=True
 
 # 日志配置
+# 日志级别: DEBUG, INFO, WARNING, ERROR, CRITICAL
+# DEBUG模式会显示详细的父Hash和完整内容信息，用于调试搜索准确性
 LOG_LEVEL=INFO
 
 # 向量检索参数
