cleaning and add HyDE

--- a/env.example
+++ b/env.example
@@ -29,8 +29,21 @@ LOG_LEVEL=INFO
 RETRIEVAL_COUNT=10
 RERANK_TOP_K=3
 RERANK_THRESHOLD=0.01
-VECTOR_SEARCH_THRESHOLD=0.20
-SIMILARITY_THRESHOLD=0.55
+
+# 向量搜索阈值（根据模式自动选择）
+# 精排模式：低阈值，因为有Rerank二次过滤，宽松召回更多候选
+VECTOR_SEARCH_THRESHOLD_WITH_RERANK=0.20
+# 直取模式：高阈值，因为没有二次过滤，需要保证质量
+VECTOR_SEARCH_THRESHOLD_WITHOUT_RERANK=0.50
+
+# 兼容旧配置（如果上面两个都没设置，才使用这个）
+# VECTOR_SEARCH_THRESHOLD=0.20
+# SIMILARITY_THRESHOLD=0.55
+
+# 查询增强参数 (HyDE技术)
+# 原问题权重，范围0-1，关键词权重 = 1 - 此值
+# 推荐值: 0.6 (原问题占60%，生成关键词占40%)
+QUERY_ENHANCEMENT_WEIGHT=0.6
 
 # LLM 参数
 LLM_TEMPERATURE=0
