add key words summary model

--- a/env.example
+++ b/env.example
@@ -5,7 +5,14 @@
 
 # LLM API 配置（SiliconFlow）
 SILICONFLOW_API_KEY=your_api_key_here
+
+# 主LLM模型（用于最终答案生成）
 SILICONFLOW_MODEL_ID=deepseek-ai/DeepSeek-R1-Distill-Qwen-7B
+
+# 查询增强专用模型（用于关键词生成）
+# 推荐使用轻量级非推理模型，速度快且无思考过程
+QUERY_ENHANCEMENT_MODEL_ID=Qwen/Qwen2.5-7B-Instruct
+
 SILICONFLOW_API_URL=https://api.siliconflow.cn/v1/chat/completions
 
 # Rerank API 配置
