add redis as a cache but save all new question as cache (not good version)

--- a/env.example
+++ b/env.example
@@ -54,3 +54,17 @@ QUERY_ENHANCEMENT_WEIGHT=0.6
 
 # LLM 参数
 LLM_TEMPERATURE=0
+
+# ==================== Redis 缓存配置 ====================
+REDIS_HOST=localhost          # Redis 服务器地址
+REDIS_PORT=6379               # Redis 端口
+REDIS_PASSWORD=               # Redis 密码（如果有，没有则留空）
+REDIS_DB=0                    # Redis 数据库编号
+
+# 语义缓存阈值
+CACHE_THRESHOLD_DIRECT=0.98   # 相似度≥此值时直接返回缓存（无需用户确认）
+CACHE_THRESHOLD_CONFIRM=0.95  # 相似度≥此值时提示用户确认是否使用缓存
+
+# 缓存设置
+CACHE_TTL=3600                # 缓存过期时间（秒），默认1小时
+CACHE_MAX_SIZE=1000           # 最大缓存条目数，超过后 LRU 淘汰最旧的
