--- a/env.example
+++ b/env.example
@@ -32,15 +32,22 @@ APP_RELOAD=True
 # DEBUG模式会显示详细的父Hash和完整内容信息，用于调试搜索准确性
 LOG_LEVEL=INFO
 
-# 向量检索参数
-RETRIEVAL_COUNT=10
-RERANK_TOP_K=3
-RERANK_THRESHOLD=0.01
+# ==================== 向量检索参数 ====================
+RETRIEVAL_COUNT=10      # 初步召回的文档数量
+RERANK_TOP_K=3         # 精排后保留的文档数量
 
-# 向量搜索阈值（根据模式自动选择）
-# 精排模式：低阈值，因为有Rerank二次过滤，宽松召回更多候选
+# 精排相关度阈值（强烈建议设置为 0.30 以上）
+# - 0.30 (30%)：推荐值，过滤明显不相关的结果
+# - 0.50 (50%)：严格模式，只保留高度相关的结果
+# - 0.01 (1%)：过于宽松，不建议使用
+RERANK_THRESHOLD=0.30
+
+# ==================== 向量搜索阈值（粗排阶段）====================
+# 精排模式：低阈值（20%），因为有 Rerank 二次过滤，宽松召回更多候选
 VECTOR_SEARCH_THRESHOLD_WITH_RERANK=0.20
-# 直取模式：高阈值，因为没有二次过滤，需要保证质量
+
+# 直取模式：高阈值（50%），因为没有二次过滤，需要保证质量
+# 建议：0.50-0.60，低于此值的结果会被直接过滤
 VECTOR_SEARCH_THRESHOLD_WITHOUT_RERANK=0.50
 
 # 兼容旧配置（如果上面两个都没设置，才使用这个）
