add mineru conversion

--- a/env.example
+++ b/env.example
@@ -22,6 +22,13 @@ SILICONFLOW_RERANK_MODEL=BAAI/bge-reranker-v2-m3
 # Local Embedding Model Path (Please modify to your actual path)
 LOCAL_EMBEDDING_MODEL_PATH=./models/acge_text_embedding
 
+# ==================== PDF Conversion Configuration (MinerU) ====================
+# Enable GPU acceleration for PDF conversion (True/False)
+PDF_USE_GPU=True
+
+# GPU device ID to use for PDF conversion (default: 0)
+PDF_GPU_ID=0
+
 # Application Configuration
 APP_HOST=0.0.0.0
 APP_PORT=8000
